<resources>
    <string name="app_name">A_Calculator</string>
    <string name="enter_a_number_text">Enter a number</string>
    <string name="btn_text_point">.</string>
    <string name="btn_text_0">0</string>
    <string name="btn_text_9">9</string>
    <string name="btn_text_8">8</string>
    <string name="btn_text_7">7</string>
    <string name="btn_text_6">6</string>
    <string name="btn_text_5">5</string>
    <string name="btn_text_4">4</string>
    <string name="btn_text_3">3</string>
    <string name="btn_text_2">2</string>
    <string name="btn_text_1">1</string>
    <string name="btn_text_div">/</string>
    <string name="btn_text_multi">*</string>
    <string name="btn_text_minus">-</string>
    <string name="btn_text_plus">+</string>
    <string name="btn_text_equal">=</string>
    <string name="btn_text_c">C</string>
    <string name="txt_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle_theme">Theme</string>
    <string name="settings_theme_auto">Auto</string>
    <string name="settings_theme_day">Day</string>
    <string name="settings_theme_night">Night</string>
</resources>