<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/input_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center"
        android:hint="@string/enter_a_number_text"
        style="@style/TextFieldStyle"
        tools:ignore="RtlHardcoded" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_eq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/btn_text_equal"
                android:layout_weight="3"
                style="@style/CalcButtonStyle.Fun" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_c"
                android:layout_weight="1"
                style="@style/CalcButtonStyle.Fun"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_1"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_2"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_3"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Sign"
                android:id="@+id/button_plus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_plus"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_4"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_5"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_6"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Sign"
                android:id="@+id/button_minus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_minus"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_7"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_8"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_9"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Sign"
                android:id="@+id/button_multi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_multi"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Num"
                android:id="@+id/button_num0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_0"
                android:layout_weight="2"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Sign"
                android:id="@+id/button_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_point"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                style="@style/CalcButtonStyle.Sign"
                android:id="@+id/button_div"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_text_div"
                android:layout_weight="1"/>

        </TableRow>

        <com.google.android.material.button.MaterialButton
            style="@style/CalcButtonStyle.Fun"
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/double_margin"
            android:text="@string/txt_settings">
        </com.google.android.material.button.MaterialButton>
    </TableLayout>



</FrameLayout>